# cuda-kernels

./: .clang-format  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/common/: benchmark.cpp  benchmark.h  common.cu  common.h  cuda_common.h  cuda_timer.cu  cuda_timer.h
src/: CMakeLists.txt  kernels.h
src/vector_add/: reference.py  vector_add.cu  vector_add.h
tests/: CMakeLists.txt  vector_add.cpp  vector_add.cu
